# PreCommitHooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
examples/: .pre-commit-config.yaml
pre_commit_hooks/: generic_check_for_binary_files.py  generic_fix_end_of_files.py  generic_replace_tabs_with_spaces.py  packer_format.py  terraform_format.py
tests/: test_generic_check_for_binary_files.py  test_generic_fix_end_of_files.py  test_generic_replace_tabs_with_spaces.py
