[tool.poetry]
name = "pre-commit-hooks"
version = "0.0.0"
description = "Dummy package"
authors = ["Clemfou <clemfou@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
generic-check-for-binary-files = "pre_commit_hooks.generic_check_for_binary_files:main"
generic-fix-end-of-files = "pre_commit_hooks.generic_fix_end_of_files:main"
generic-replace-tabs-with-spaces = "pre_commit_hooks.generic_replace_tabs_with_spaces:main"
packer-format = "pre_commit_hooks.packer_format:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "ANN101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
